@@ -5,6 +5,7 @@ next:
          - fix evaluating nested filter conditions
          - fix check_drivesize missing performance data when using free_bytes threshold (#136)
          - fix check_http/check_tcp/check_dns help (#135)
+         - fix using condition alias on nested filters
          - update windows exporter to 0.26.1
 
 0.26     Wed Jul 17 15:23:37 CEST 2024
